# chrome-cdp

./: .gitignore  AGENTS.md  CLAUDE-CODEX-CHAT.md  Cargo.toml  MCP_INSTRUCTIONS.md  PORTING.md  README.md  SKILL.md  bump-version.sh  install.sh  tools.json  uninstall.sh
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
docs/plans/: 2026-03-07-search-dismiss-readurls-design.md
docs/superpowers/plans/: 2026-03-09-webact-improvements.md
skills/webact/: SKILL.md  mcp.js  mcp.src.js  package.json  sites.md  webact.js  webact.src.js
skills/webact-rs/: Cargo.toml  PORTING.md  README.md
skills/webact-rs/src/: lib.rs  main.rs  mcp_main.rs  scripts.rs  types.rs  utils.rs
skills/webact-rs/src/commands/: core.rs  data.rs  interaction.rs  mod.rs  session.rs
skills/webact-rs/src/commands/interaction/: forms.rs  pointer.rs  query.rs  waiting.rs
src/: api_client.rs  config.rs  lib.rs  main.rs  mcp.rs  mcp_clients.rs  mcp_main.rs  scripts.rs  types.rs  utils.rs
src/commands/: batch.rs  core.rs  data.rs  mod.rs  session.rs
src/commands/interaction/: forms.rs  pointer.rs  query.rs  waiting.rs
www/: index.html
