[package]
name = "webact-rs"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "webact-rs"
path = "src/main.rs"

[[bin]]
name = "webact-mcp"
path = "src/mcp_main.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
futures-util = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
